/*
 * $Id: ChangeLog,v 1.3237 2004/07/30 07:15:58 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-07-30 11:00 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  * source/rtl/gtwvt/wvtutils.c
    * added HB_EXTERN_BEGIN/END to hb_HInstance

2004-07-30 11:15 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * contrib/libct/token1.c
    ! Fixed TOKEN() to correctly return the last token before the trailing
      separators when non-extended syntax is used.
  * contrib/libct/token.prg
    + Added another testcase.

2004-07-29 16:53 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * include/hbclass.ch
    + Added support for ENABLE CLASS TYPE ALL (thanks to Francesco)

  * source/rtl/tclass.prg
  * source/rtl/cstr.prg
    * Minor improvement in ValToPrg() related to Pointer type.

  * source/vm/hvm.c
    ! Fixed minor bug related to BLOCK class support.

  * tests/enbltype.prg
    * Enhanced to show more types.

2004-07-29 23:10 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbset.h
  * xharbour/include/set.ch
  * xharbour/source/rtl/set.c
  * xharbour/source/pp/pptable.c
  * xharbour/source/rdd/dbf1.c
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
  * xharbour/source/rdd/dbfntx/dbfntx1.c
   + added SET HARDCOMMIT [ ON|OFF ] | set(_SET_HARDCOMMIT, lParam)
     (ON by default) which force hard OS low level commit of data
     files (DBF/MEMO/INDEXES) in DBF, DBFDBT, DBFFPT, DBFCDX, DBFNTX RDDs

  * xharbour/source/rdd/dbf1.c
   + properly recognize hacked DBF header for RDD private data
     (VFP can make such files)

2004-07-22 21:15 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/gtwvt/gtwvt.c
    - hb_wvt_gtDlgProcModeless( HWND hDlg, UINT message, WPARAM wParam, LPARAM lParam )